Update Spread Analysis & Backtest.ipynb

--- a/Spread Analysis & Backtest.ipynb
+++ b/Spread Analysis & Backtest.ipynb
@@ -59,7 +59,7 @@
     "import statsmodels.api as sm\n",
     "\n",
     "\n",
-    "ek.set_app_key('1b68381d8f684b0183be832bab589097fd9942f2')\n",
+    "ek.set_app_key('APP_KEY')\n",
     "\n",
     "df = ek.get_timeseries(rics=['MSDc1','MSDc3'],fields=['CLOSE'],start_date='2017-01-01',end_date='2020-04-23',interval='hour')\n",
     "\n",
